Fixed overlapping header and jumbotron

--- a/FlaskApp/static/index.css
+++ b/FlaskApp/static/index.css
@@ -2,3 +2,20 @@
     background-color: #75d9ef;
     border-color: #75d9ef;
 }
+.header {
+    position:absolute;
+    left:0;
+    right:0;
+    margin-bottom: 50px;
+}
+#header-text {
+    position:relative;
+    left:20px;
+}
+.jumbotron {
+    float:left;
+    clear:both;
+    position: relative;
+    margin-top: 80px;
+}
+
